Remove SQL dump files and add .env.example configuration file

--- a/templates/base/base.twig
+++ b/templates/base/base.twig
@@ -17,7 +17,8 @@
 		<link rel="stylesheet" href="{{ url('assets/css/layout.css') }}">
 		<link rel="stylesheet" href="{{ url('assets/css/partials.css') }}">
 		<link rel="stylesheet" href="{{ url('assets/css/fonts.css') }}">
-		<link rel="stylesheet" href="{{ url('assets/css/reset.css') }}">
+		<link
+		rel="stylesheet" href="{{ url('assets/css/reset.css') }}">
 
 		{# Optional per-page styles #}
 		{% block pageStyles %}{% endblock %}
